<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="179.5dp"
        android:layout_height="371dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/about" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="181dp"
        android:layout_height="22dp"
        android:background="#33322F"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="181dp"
        android:layout_height="18dp"
        android:background="#33322F"
        android:text="@string/our_purpose"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="181dp"
        android:layout_height="170dp"
        android:background="#33322F"
        android:text="@string/paragraph1"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="181dp"
        android:layout_height="20dp"
        android:background="#33322F"
        android:text="@string/our_goals"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="181dp"
        android:layout_height="141dp"
        android:background="#33322F"
        android:text="@string/paragraph2"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="360dp"
        android:layout_height="20dp"
        android:background="#33322F"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:text="@string/our_vision" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="360dp"
        android:layout_height="190dp"
        android:background="#33322F"
        android:text="@string/paragraph3"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

</androidx.constraintlayout.widget.ConstraintLayout>