<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnShop"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:background="#33322F"
        android:text="@string/btnShop"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/btnAbout"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:background="#33322F"
        android:text="@string/btnAboutUs"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/btnRetail3"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRetail3"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:background="#33322F"
        android:text="@string/btnRetail"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnStartShop"
        android:layout_width="360dp"
        android:layout_height="92dp"
        android:background="#33322F"
        android:text="@string/btnStartShop"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSales" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="360dp"
        android:layout_height="270dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnShop"
        app:srcCompat="@drawable/retailbg" />

    <TextView
        android:id="@+id/txtSales"
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:background="#33322F"
        android:gravity="center"
        android:includeFontPadding="true"
        android:text="@string/txtSales"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>